# SIMPNet_

./: .gitmodules  LICENSE  README.md
complex_env/: CMakeLists.txt  package.xml
complex_env/src/KGPlanner/: gaussian_normalization_info.pkl  graph_constructor.py  main_train.py  mp_gnn.py  trainer.py
complex_env/src/SIMPNet/: gaussian_normalization_info.pkl  graph_constructor.py  normalization_info.pkl  trainer.py  utils.py
complex_env/src/SIMPNetRelaxedFK/: gaussian_normalization_info.pkl  graph_constructor.py  main_train.py  mp_gnn.py  trainer.py
simple_env/: CMakeLists.txt  package.xml
simple_env/src/FK/: data_synth.py  get_fk_offline.py  main_fk.py  move_obs_embed.py
simple_env/src/KGPlanner/: dataset_analysis.py  gaussian_normalization_info.pkl  graph_constructor.py  main_train.py  mp_gnn.py  trainer.py
simple_env/src/KGPlanner1/: dataset_analysis.py  gaussian_normalization_info.pkl  graph_constructor.py  main_train.py  mp_gnn.py  trainer.py
simple_env/src/SIMPNet/: gaussian_normalization_info.pkl  main_train.py  trainer.py
simple_env/src/SIMPNetRelaxedFK/: gaussian_normalization_info.pkl  graph_constructor.py  main_train.py  mp_gnn.py  trainer.py
simple_env/src/trained_models/: gaussian_trained_GCN.pt  gaussian_trained_mainGNN.pt  (+2 more)
ur5e_gripper_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
ur5e_gripper_moveit_config/config/: gazebo_ur5e.urdf  ros_controllers.yaml  ur5e.srdf
ur5e_gripper_moveit_config/launch/: gazebo.launch  moveit.rviz  planning_context.launch  ros_controllers.launch  sensor_manager.launch.xml
(+1397 files in other folders)
